# health-skills

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
healthdata/: __init__.py  auth.py  config.py  io.py  timeutil.py
skills/dexcom-clarity-cgm/: SKILL.md
skills/dexcom-clarity-cgm/agents/: openai.yaml
skills/dexcom-clarity-cgm/scripts/: auth_dexcom_clarity.py  normalize_dexcom_clarity.py  pull_dexcom_clarity.py
skills/fitbit/: SKILL.md
skills/fitbit/agents/: openai.yaml
skills/fitbit/scripts/: auth_fitbit.py  normalize_fitbit.py  pull_fitbit.py  takeout_fitbit.py
skills/nike-run-club/: SKILL.md
skills/nike-run-club/agents/: openai.yaml
skills/nike-run-club/scripts/: normalize_nike_run_club.py  pull_nike_run_club.py
skills/polar-accesslink/: SKILL.md
skills/polar-accesslink/agents/: openai.yaml
skills/polar-accesslink/scripts/: auth_polar_accesslink.py  calibrate_fitbit_polar.py  calibrate_fitbit_polar_samples.py  normalize_polar_accesslink.py  pull_polar_accesslink.py
tests/: __init__.py  test_dexcom_normalize.py  test_fitbit_normalize.py  test_fitbit_takeout.py  test_healthdata_auth.py  test_healthdata_io.py  test_nike_run_club_normalize.py  test_polar_normalize.py
